Cambio de fotos

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   
   <section id="gallery">
     <div class="gallery">
-      <img src="img\WhatsApp Image 2023-05-28 at 4.16.07 PM (1).jpeg" alt="Foto de Joselyn">
+      <img src="img\Manos Img.jpg" alt="Foto de Joselyn">
       <video src="media\Video.mp4" controls autoplay class="selected"></video>
-      <img src="img\WhatsApp Image 2023-05-28 at 4.16.07 PM (2).jpeg" alt="Foto de los novios">
+      <img src="img\Vuelta img.jpg" alt="Foto de los novios">
     </div>
   </section>
 
