<<li><a href="#rafting">Rafting</a></li>li><a href="#rafting">Rafting</a></li>

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="#gallery">Inicio</a></li>
         <li><a href="#dress-code">Codigo de Vestimenta</a></li>
         <li><a href="#location">Lugar y Horario</a></li>
+        <li><a href="#rafting">Rafting</a></li>
         <li><a href="#container">Contacto</a></li>
       </ul>
     </nav>
@@ -65,8 +66,8 @@
     <h1>Tu Presencia es un Regalo, pero si Deseas...</h1>
     <p>Puedes obsequiarnos algo que consideres que será de utilidad para nosotros, pero si no sabes que podria ser ese
       "algo" te proponemos considerar una contribución en efectivo. Será de gran ayuda para nuestros planes futuros
-      juntos. Sin embargo, lo más importante para nosotros es compartir este momento contigo. ¡Tu amor y apoyo
-      significan mucho para nosotros! ¡Esperamos verte pronto y celebrar juntos!</p>
+      juntos. Sin embargo, esto es totalmente opcional, ya que lo más importante para nosotros es compartir este momento 
+      contigo. ¡Tu amor y apoyo significan mucho para nosotros! ¡Esperamos verte pronto y celebrar juntos!</p>
   </section>
 
   <section class="location " id="location">
@@ -75,12 +76,13 @@
     <p>La ceremonia se llevará a cabo en puerto Manso. Esta es una localidad situada a 1 hora y 30 min (Aproximadamente)
       de la ciudad de San Carlos de Bariloche.</p>
 
-      <div class="nota" id="nota">
-        <p><span class="important-text">Llegaremos al sitio con un único transporte
+    <div class="nota" id="nota">
+      <p><span class="important-text">Llegaremos al sitio con un único transporte
           que saldrá desde "Villegas 237" a las 09:00 hs (Se recomienda estar al menos 15 minutos antes, Por favor ¡SEAN
           PUNTUALES!). <br> <br>
-          Estaremos volviendo a la ciudad de San Carlos de Bariloche el dia Domingo a las 3:30pm (hora de salida desde puerto Manso).</span></p>
-      </div>
+          Estaremos volviendo a la ciudad de San Carlos de Bariloche el dia Domingo a las 3:30pm (hora de salida desde
+          puerto Manso).</span></p>
+    </div>
 
     <p>Mapa del punto de encuentro: </p>
 
@@ -90,6 +92,17 @@
         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
+
+  </section>
+
+  <section class="rafting" id="rafting">
+    <h1>Informacion del Rafting</h1>
+
+    <p><span class="important-text">Para el Rafting sortearemos el dia sabado 6 cupos.</span> Se realizará la actividad
+      el dia domingo a las 10 de la mañana y se recomienda que cuenten con: calzado adicional (Tiene que ser cerrado), 
+      traje de baño, remera playera, toalla, protector solar y una bolsa de residuos.</p>
+
+    <p>Se estima que esta actividad dure alrededor de 2 horas.</p>
 
   </section>
 
